# Team-Lobachvsky-nm-3

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: TMA.cpp.0C8D2664D1016F0C.idx  Tables.cpp.4F36EA02A4DB2943.idx  Tables.hpp.08A116DA5FF7C515.idx  common.hpp.A6579DA09A0014C6.idx  logger.cpp.CD722E3089958994.idx  logger.hpp.2E9B588E7642DB8C.idx
cmake/: testing_util.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: Eval.hpp  TMA.hpp
src/core/src/: Eval.cpp  TMA.cpp
src/dataTypes/: CMakeLists.txt
src/dataTypes/include/dataTypes/: FirstTable.hpp  SecondTable.hpp  Tables.hpp  common.hpp  config.hpp
src/dataTypes/src/: FirstTable.cpp  SecondTable.cpp  config.cpp
src/gui/: CMakeLists copy.txt  CMakeLists.txt  main.cpp  mainwindow.ui  widget.cpp  widget.h
src/utils/logger/: CMakeLists.txt
src/utils/logger/src/nm/: logger.cpp
src/utils/profiler/include/nm/utils/: profiler.hpp
tests/: CMakeLists.txt  test_TMA.cpp  test_cubicSplines.cpp
tests/utils/: CMakeLists.txt
tests/utils/include/tests/: utils.hpp
tests/utils/src/: utils.cpp
